tests/rascal/negative/type_errors/L1/11_expression_ES10_D4_93.ob
MODULE Test11;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
  (* error *)  q := ((200 > ((q - 0) MOD 200)) OR ((- 2) > 2));
               z := y;
               p := ((+ (y MOD 1)) >= (z + 2));
               x := (- (- x));
               r := ((~ q) OR ((x DIV 2) > (- (y DIV x))));
               r := ((2 DIV (x DIV y)) <= (0 - (1223 * 0)));
               x := z;
               z := 1223;
               p := (p & ((- y) # 0));
               x := 1
END Test11.